Pulled in simple startup code.  Made start and exit buttons, made 'Exit' functional

--- a/python-book/Fill/progress.html
+++ b/python-book/Fill/progress.html
@@ -71,12 +71,12 @@ body {
 <h2>2016-04-11</h2>
 
 <ul>
-    <li class="not-started">Which am I using Python 2 or 3?</li>
+    <li class="released">Which am I using Python 2 or 3? Looks like I'm going with 2 for now</li>
 
-    <li class="not-started">Need a welcome screen.</li>
+    <li class="released">Need a welcome screen.</li>
     <ul>
         <li class="not-started">Need clickable button for Start</li>
-        <li class="not-started">Need clickable button for quit</li>
+        <li class="released">Need clickable button for quit</li>
     </ul>
     <li class="not-started">Need a game screen</li>
     <ul>
