--- a/python-book/Fill/progress.html
+++ b/python-book/Fill/progress.html
@@ -75,7 +75,7 @@ body {
 
     <li class="released">Need a welcome screen.</li>
     <ul>
-        <li class="not-started">Need clickable button for Start</li>
+        <li class="released">Need clickable button for Start</li>
         <li class="released">Need clickable button for quit</li>
     </ul>
     <li class="not-started">Need a game screen</li>
@@ -85,9 +85,9 @@ body {
     </ul>
     <li class="not-started">Need a win screen</li>
     <li class="not-started">Need a lose screen</li>
-    <li class="not-started">Quit on clicking the little close "x"</li>
+    <li class="released">Quit on clicking the little close "x"</li>
     <li class="released">Formalize to-do list?</li>
-    <li class="not-started">Reference file for startup on a new system</li>
+    <li class="in-progress">Reference file for startup on a new system</li>
     <li class="not-started">Release process</li>
 </ul>
 
