--- a/python-book/Fill/progress.html
+++ b/python-book/Fill/progress.html
@@ -78,7 +78,7 @@ body {
         <li class="released">Need clickable button for Start</li>
         <li class="released">Need clickable button for quit</li>
     </ul>
-    <li class="not-started">Need a game screen</li>
+    <li class="in-progress">Need a game screen</li>
     <ul>
         <li class="not-started">Game Board area</li>
         <li class="not-started">Color interaction area</li>
