--- a/breakout/index.html
+++ b/breakout/index.html
@@ -18,7 +18,6 @@ X-Speed: <input type="text" id="x-speed" /> <br />
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
 <script>
-    // JavaScript code goes here
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
 
@@ -38,11 +37,53 @@ X-Speed: <input type="text" id="x-speed" /> <br />
     var xSpeed = document.getElementById("x-speed")
 
     var paddleHeight = 10;
-    var paddleWidth = 175;
+    var paddleWidth = canvas.width;
     var paddleX = (canvas.width-paddleWidth)/2;
 
     var rightPressed = false;
     var leftPressed = false;
+
+    var brickRowCount = 3;
+    var brickColumnCount = 5;
+    var brickWidth = 75;
+    var brickHeight = 20;
+    var brickPadding = 10;
+    var brickOffsetTop = 30;
+    var brickOffsetLeft = 30;
+
+    var score = 0
+
+    var bricks = [];
+    for(c=0; c<brickColumnCount; c++) {
+        bricks[c] = [];
+        for(r=0; r<brickRowCount; r++) {
+            bricks[c][r] = { x: 0, y: 0, status: 1 };
+        }
+    }
+
+    function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Score: "+score, 8, 20);
+    }
+
+    function drawBricks() {
+        for(c=0; c<brickColumnCount; c++) {
+            for(r=0; r<brickRowCount; r++) {
+                if (bricks[c][r].status == 1) {
+                    var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
+                    var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
+                    bricks[c][r].x = brickX;
+                    bricks[c][r].y = brickY;
+                    ctx.beginPath();
+                    ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                    ctx.fillStyle = "#0095DD";
+                    ctx.fill();
+                    ctx.closePath();
+                }
+            }
+        }
+    }
 
     function drawBall() {
         ctx.beginPath();
@@ -75,10 +116,12 @@ X-Speed: <input type="text" id="x-speed" /> <br />
 
         drawBall()
         drawPaddle()
+        drawBricks()
+        collisionDetection()
+        drawScore()
 
         if (y + dy < ballRadius) {
             dy = -dy
-            randomColor()
         }
         else if (y + dy > canvas.height - ballRadius) {
             if(x > paddleX && x < paddleX + paddleWidth) {
@@ -92,7 +135,6 @@ X-Speed: <input type="text" id="x-speed" /> <br />
         if (x + dx < ballRadius ||
             x + dx > canvas.width - ballRadius) {
             dx = -dx
-            randomColor()
         }
 
         if(rightPressed && paddleX < canvas.width - paddleWidth) {
@@ -127,10 +169,40 @@ X-Speed: <input type="text" id="x-speed" /> <br />
         }
     }
 
+    function mouseMoveHandler(e) {
+        var relativeX = e.clientX - canvas.offsetLeft;
+        if(relativeX > 0 && relativeX < canvas.width) {
+            paddleX = relativeX - paddleWidth/2;
+        }
+    }
+
+    function collisionDetection() {
+        console.log("Detect Collisions:  ", x, y)
+        for(c=0; c<brickColumnCount; c++) {
+            for(r=0; r<brickRowCount; r++) {
+                var b = bricks[c][r];
+                // calculations
+                if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight && b.status == 1) {
+                    console.log("Collision detected")
+                    dy = -dy;
+                    b.status = 0;
+                    score++
+                    randomColor()
+                    if(score == brickRowCount*brickColumnCount) {
+                        alert("YOU WIN, CONGRATULATIONS!");
+                        document.location.reload();
+                    }
+                }
+            }
+        }
+    }
+
+
     setInterval(draw, 10);
 
     document.addEventListener("keydown", keyDownHandler, false);
     document.addEventListener("keyup", keyUpHandler, false);
+    document.addEventListener("mousemove", mouseMoveHandler, false);
 
 
     ctx.beginPath();
