--- a/another-fill/index.html
+++ b/another-fill/index.html
@@ -13,8 +13,8 @@
 <body>
 
 <canvas id="myCanvas" width="960" height="640"></canvas>
-
-<script src="./game_script.js">
+<script>
+    require('./game_script.js');
 
 </script>
 
