Revisiting, getting to work after last update

--- a/another-fill/index.html
+++ b/another-fill/index.html
@@ -13,10 +13,7 @@
 <body>
 
 <canvas id="myCanvas" width="960" height="640"></canvas>
-<script>
-    require('./game_script.js');
-
-</script>
+<script src="./game_script.js"></script>
 
 </body>
 </html>
